<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.lucian.myappportofolio.MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/list_vertical_margin"
            android:text="@string/list_title"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <Button
            android:id="@+id/btnPopularMovies"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:text="@string/popular_movies"
            android:theme="@style/ButtonTheme" />

        <Button
            android:id="@+id/btnStockHawk"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnPopularMovies"
            android:text="@string/stock_hawk"
            android:theme="@style/ButtonTheme" />

        <Button
            android:id="@+id/btnBuildBigger"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnStockHawk"
            android:text="@string/build_it_bigger"
            android:theme="@style/ButtonTheme" />

        <Button
            android:id="@+id/btnAppMaterial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnBuildBigger"
            android:layout_centerHorizontal="true"
            android:text="@string/make_your_app_material"
            android:theme="@style/ButtonTheme" />

        <Button
            android:id="@+id/btnGoUbiquitous"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnAppMaterial"
            android:text="@string/go_ubiquitous"
            android:theme="@style/ButtonTheme" />

        <Button
            android:id="@+id/btnCapstone"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnGoUbiquitous"
            android:text="@string/capstone"
            android:theme="@style/ButtonTheme" />

    </RelativeLayout>
</ScrollView>
